--- a/Vista/Contenido.Master
+++ b/Vista/Contenido.Master
@@ -16,7 +16,7 @@
     <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">-->
     <style>
         * {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: Tahoma, Verdana, sans-serif;
         }
     </style>
     <%
@@ -31,22 +31,28 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+        <ul class="navbar-nav bg-secondary sidebar sidebar-dark accordion" id="accordionSidebar">
 
+            <br />
+            <br />
+            <br />
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="dashboard.aspx">
                 <div class="sidebar-brand-icon">
-                    <i class="fas fa-hospital-user"></i>
                 </div>
-                <div class="sidebar-brand-text mx-2">Red de salud</div>
+                <div class="sidebar-brand-text mx-2">Red Vallecaucana de Salud</div>
             </a>
 
+            <br />
+            <br />
+            <br />
             <hr class="sidebar-divider">
             <li class="nav-item">
-                <a class="nav-link" href="dashboard.aspx">
-                    <i class="fas fa-home"></i>
+                <a class="nav-link text-center" href="dashboard.aspx">
                     <span>Inicio</span></a>
             </li>
+
+
             <!-- Nav Items -->
             <%
                 if (int.Parse(Session["idRol"].ToString()) == 1)
@@ -54,32 +60,27 @@
             %>
             <!-- Menu para admin -->
             <li class="nav-item">
-                <a class="nav-link" href="agregarEnte.aspx">
-                    <i class="far fa-hospital"></i>
+                <a class="nav-link text-center" href="agregarEnte.aspx">
                     <span>Crear ente</span></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="agregarEspecialista.aspx">
-                    <i class="fas fa-user-plus"></i>
+                <a class="nav-link text-center" href="agregarEspecialista.aspx">
                     <span>Crear especialista</span></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="consultarCitas.aspx">
-                    <i class="far fa-calendar-alt"></i>
+                <a class="nav-link text-center" href="consultarCitas.aspx">
                     <span>Consultar citas</span></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="especialidades.aspx">
-                    <i class="fas fa-user-md"></i>
+                <a class="nav-link text-center" href="especialidades.aspx">
                     <span>Consultar especialista</span></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="enciclopedia.aspx">
-                    <i class="fas fa-viruses"></i>
+                <a class="nav-link text-center" href="enciclopedia.aspx">
                     <span>Consultar enfermedades</span></a>
             </li>
 
@@ -94,14 +95,12 @@
             <!-- Menu para contenido -->
 
             <li class="nav-item">
-                <a class="nav-link" href="agregarEspecialista.aspx">
-                    <i class="fas fa-user-plus"></i>
+                <a class="nav-link text-center" href="agregarEspecialista.aspx">
                     <span>Crear especialista</span></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="especialidades.aspx">
-                    <i class="fas fa-user-md"></i>
+                <a class="nav-link text-center" href="especialidades.aspx">
                     <span>Consultar especialista</span></a>
             </li>
 
@@ -115,20 +114,17 @@
             <!-- Menu normal  -->
 
             <li class="nav-item">
-                <a class="nav-link" href="consultarCitas.aspx">
-                    <i class="fas fa-star"></i>
+                <a class="nav-link text-center" href="consultarCitas.aspx">
                     <span>Calificar citas</span></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="especialidades.aspx">
-                    <i class="fas fa-user-md"></i>
+                <a class="nav-link text-center" href="especialidades.aspx">
                     <span>Consultar especialista</span></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="enciclopedia.aspx">
-                    <i class="fas fa-viruses"></i>
+                <a class="nav-link text-center" href="enciclopedia.aspx">
                     <span>Consultar enfermedades</span></a>
             </li>
 
@@ -137,11 +133,6 @@
             %>
 
             <hr class="sidebar-divider d-none d-md-block">
-
-            <!-- Sidebar boton -->
-            <div class="text-center d-none d-md-inline">
-                <button class="rounded-circle border-0" id="sidebarToggle"></button>
-            </div>
 
         </ul>
         <!-- End of Sidebar -->
@@ -154,42 +145,26 @@
                 <div id="content">
 
                     <!-- Topbar -->
-                    <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+                    <nav class="navbar navbar-expand navbar-light bg-dark topbar mb-4 static-top ">
 
-                        <!-- Sidebar Toggle (Topbar) -->
-                        <div class="form-inline">
-                            <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-                                <i class="fa fa-bars"></i>
-                            </button>
-                        </div>
+
 
                         <!-- Topbar Navbar -->
                         <ul class="navbar-nav ml-auto">
-                            <li class="nav-item dropdown no-arrow">
-                                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <span class="mr-2 d-none d-lg-inline text-gray-600 small">Tipo de rol: 
-                                        <b><% Response.Write(Session["rol"]);%></b>
-                                    </span>
-                                </a>
-                            </li>
-
-                            <div class="topbar-divider d-none d-sm-block"></div>
 
                             <!-- Nav Item - User Information -->
                             <li class="nav-item dropdown no-arrow">
                                 <a class="nav-link dropdown-toggle" href="#" id="userDropdown2" role="button"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <span class="mr-2 d-none d-lg-inline text-gray-600 small">
+                                    <span class="mr-2 d-none d-lg-inline text-gray-600 small">BIENVENIDO: 
                                         <% Response.Write(Session["nombre"]);%>&nbsp;<%Response.Write(Session["apellido"]);%>
                                     </span>
-                                    <i class="fas fa-user" style="color: black"></i>
                                 </a>
                                 <!-- Dropdown - User Information -->
                                 <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                     aria-labelledby="userDropdown">
                                     <center>
-                                        <a class="btn m-0 p-0" href="login.aspx"><i class="fas fa-sign-out-alt fa-sm fa-fw text-black-400 mr-2"></i>Cerrar sesión</a>
+                                        <a class="btn m-0 p-0" href="login.aspx">SALIR</a>
                                     </center>
                                 </div>
                             </li>
