--- a/Vista/Contenido.Master
+++ b/Vista/Contenido.Master
@@ -5,20 +5,24 @@
 <html>
 <head runat="server">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <!-- font awesome -->
-    <script src="https://kit.fontawesome.com/7769f8ac48.js" crossorigin="anonymous"></script>
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
-    <!-- css template -->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
-    <!-- css bootstrap 
-    <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">-->
-    <style>
-        * {
-            font-family: Tahoma, Verdana, sans-serif;
-        }
-    </style>
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- MetisMenu CSS -->
+    <link href="css/metisMenu.min.css" rel="stylesheet">
+
+    <!-- Timeline CSS -->
+    <link href="css/timeline.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/startmin.css" rel="stylesheet">
+
+    <!-- Morris Charts CSS -->
+    <link href="css/morris.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
     <%
         if (Session["idRol"] == null)
             off();
@@ -26,177 +30,136 @@
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
-<body id="page-top">
+<body>
 
     <div id="wrapper">
 
-        <!-- Sidebar -->
-        <ul class="navbar-nav bg-secondary sidebar sidebar-dark accordion" id="accordionSidebar">
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="dashboard.aspx">Red Vallecaucana de salud</a>
+            </div>
+            <ul class="nav navbar-right navbar-top-links">
 
-            <br />
-            <br />
-            <br />
-            <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="dashboard.aspx">
-                <div class="sidebar-brand-icon">
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <i class="fa fa-user fa-fw"></i><% Response.Write(Session["nombre"]);%>&nbsp;<%Response.Write(Session["apellido"]);%><b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu dropdown-user">
+                        <li class="divider"></li>
+                        <li><a href="Login.aspx"><i class="fa fa-sign-out fa-fw"></i>Salir</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <!-- /.navbar-top-links -->
+
+            <div class="navbar-default sidebar" role="navigation">
+                <div class="sidebar-nav navbar-collapse">
+                    <ul class="nav" id="side-menu">
+                        <li class="sidebar-search">
+                        </li>
+                        <li>
+                            <a href="dashboard.aspx" class="active"><i class="fa fa-dashboard fa-fw"></i>Inicio</a>
+                        </li>
+                        <!-- Nav Items -->
+                        <%
+                            if (int.Parse(Session["idRol"].ToString()) == 1)
+                            {
+                        %>
+                        <!-- Menu para admin -->
+                        <li>
+                            <a href="agregarEnte.aspx"><i class="fa fa-bar-chart-o fa-fw"></i>Crear ente</a>
+                        </li>
+                        <li>
+                            <a href="agregarEspecialista.aspx"><i class="fa fa-table fa-fw"></i>Crear especialista</a>
+                        </li>
+                        <li>
+                            <a href="consultarCitas.aspx"><i class="fa fa-edit fa-fw"></i>Consultar citas</a>
+                        </li>
+                        <li>
+                            <a href="especialidades.aspx"><i class="fa fa-wrench fa-fw"></i>Consultar especialista</a>
+                        </li>
+                        <li>
+                            <a href="enciclopedia.aspx"><i class="fa fa-sitemap fa-fw"></i>Consultar enfermedades</a>
+                        </li>
+                        <%
+                            }
+                        %>
+
+                        <%
+                            if (int.Parse(Session["idRol"].ToString()) == 2)
+                            {
+                        %>
+                        <!-- Menu para contenido -->
+                        <li>
+                            <a href="agregarEspecialista.aspx"><i class="fa fa-bar-chart-o fa-fw"></i>Crear especialista</a>
+                        </li>
+                        <li>
+                            <a href="especialidades.aspx"><i class="fa fa-table fa-fw"></i>Consultar especialista</a>
+                        </li>
+                        <%
+                            }
+                        %>
+                        <%
+                            if (int.Parse(Session["idRol"].ToString()) == 3)
+                            {
+                        %>
+                        <!-- Menu normal  -->
+                        <li>
+                            <a href="consultarCitas.aspx"><i class="fa fa-bar-chart-o fa-fw"></i>Calificar citas</a>
+                        </li>
+                        <li>
+                            <a href="especialidades.aspx"><i class="fa fa-table fa-fw"></i>Consultar especialista</a>
+                        </li>
+                        <li>
+                            <a href="enciclopedia.aspx"><i class="fa fa-edit fa-fw"></i>Consultar enfermedades</a>
+                        </li>
+                        <%
+                            }
+                        %>
+                    </ul>
                 </div>
-                <div class="sidebar-brand-text mx-2">Red Vallecaucana de Salud</div>
-            </a>
-
-            <br />
-            <br />
-            <br />
-            <hr class="sidebar-divider">
-            <li class="nav-item">
-                <a class="nav-link text-center" href="dashboard.aspx">
-                    <span>Inicio</span></a>
-            </li>
-
-
-            <!-- Nav Items -->
-            <%
-                if (int.Parse(Session["idRol"].ToString()) == 1)
-                {
-            %>
-            <!-- Menu para admin -->
-            <li class="nav-item">
-                <a class="nav-link text-center" href="agregarEnte.aspx">
-                    <span>Crear ente</span></a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link text-center" href="agregarEspecialista.aspx">
-                    <span>Crear especialista</span></a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link text-center" href="consultarCitas.aspx">
-                    <span>Consultar citas</span></a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link text-center" href="especialidades.aspx">
-                    <span>Consultar especialista</span></a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link text-center" href="enciclopedia.aspx">
-                    <span>Consultar enfermedades</span></a>
-            </li>
-
-            <%
-                }
-            %>
-
-            <%
-                if (int.Parse(Session["idRol"].ToString()) == 2)
-                {
-            %>
-            <!-- Menu para contenido -->
-
-            <li class="nav-item">
-                <a class="nav-link text-center" href="agregarEspecialista.aspx">
-                    <span>Crear especialista</span></a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link text-center" href="especialidades.aspx">
-                    <span>Consultar especialista</span></a>
-            </li>
-
-            <%
-                }
-            %>
-            <%
-                if (int.Parse(Session["idRol"].ToString()) == 3)
-                {
-            %>
-            <!-- Menu normal  -->
-
-            <li class="nav-item">
-                <a class="nav-link text-center" href="consultarCitas.aspx">
-                    <span>Calificar citas</span></a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link text-center" href="especialidades.aspx">
-                    <span>Consultar especialista</span></a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link text-center" href="enciclopedia.aspx">
-                    <span>Consultar enfermedades</span></a>
-            </li>
-
-            <%
-                }
-            %>
-
-            <hr class="sidebar-divider d-none d-md-block">
-
-        </ul>
+            </div>
+        </nav>
         <!-- End of Sidebar -->
 
         <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
-            <form role="form" method="post" runat="server">
+        <div id="page-wrapper">
+            <div class="container-fluid">
+                <form role="form" method="post" runat="server">
 
                 <!-- Main Content -->
-                <div id="content">
-
-                    <!-- Topbar -->
-                    <nav class="navbar navbar-expand navbar-light bg-dark topbar mb-4 static-top ">
-
-
-
-                        <!-- Topbar Navbar -->
-                        <ul class="navbar-nav ml-auto">
-
-                            <!-- Nav Item - User Information -->
-                            <li class="nav-item dropdown no-arrow">
-                                <a class="nav-link dropdown-toggle" href="#" id="userDropdown2" role="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <span class="mr-2 d-none d-lg-inline text-gray-600 small">BIENVENIDO: 
-                                        <% Response.Write(Session["nombre"]);%>&nbsp;<%Response.Write(Session["apellido"]);%>
-                                    </span>
-                                </a>
-                                <!-- Dropdown - User Information -->
-                                <div class="dropdown-menu dropdown-menu-right"
-                                    aria-labelledby="userDropdown">
-                                    <center>
-                                        <a class="btn m-0 p-0" href="login.aspx">SALIR</a>
-                                    </center>
-                                </div>
-                            </li>
-                        </ul>
-                    </nav>
-                    <!-- End of Topbar -->
-
                     <!-- Contenido principal -->
-                    <div class="container-fluid">
                         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                         </asp:ContentPlaceHolder>
-                    </div>
-
-                </div>
-
-            </form>
+                </form>           
+            </div>
         </div>
         <!-- End of Content Wrapper -->
+
+        <asp:ContentPlaceHolder ID="footer" runat="server"></asp:ContentPlaceHolder>
     </div>
 
     <!-- End of Page Wrapper -->
 
     <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded" href="#page-top">
-        <i class="fas fa-angle-up"></i>
-    </a>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="js/popper.min.js"></script>
+
+    <!-- jQuery -->
+    <script src="js/jquery.min.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-    <asp:ContentPlaceHolder ID="footer" runat="server">
-    </asp:ContentPlaceHolder>
-    <script src="js/sb-admin-2.min.js"></script>
+
+    <!-- Metis Menu Plugin JavaScript -->
+    <script src="js/metisMenu.min.js"></script>
+
+    <!-- Morris Charts JavaScript -->
+    <script src="js/raphael.min.js"></script>
+    <script src="js/morris.min.js"></script>
+    <script src="js/morris-data.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/startmin.js"></script>
+
 </body>
 </html>
 
