--- a/Vista/Contenido.Master
+++ b/Vista/Contenido.Master
@@ -160,6 +160,16 @@
     <!-- Custom Theme JavaScript -->
     <script src="js/startmin.js"></script>
 
+            <!---->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+        
+    <!-- Datatables -->
+    <script src="vendor/datatables/jquery.dataTables.min.js"></script>
+    <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
+    <script src="js/demo/datatables-demo.js"></script>
+
 </body>
 </html>
 
